--- a/app/views/likes/index.html.erb
+++ b/app/views/likes/index.html.erb
@@ -1,29 +1,44 @@
-<h1>Listing likes</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Category</th>
-    <th>Facebook</th>
-    <th>Created time</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @likes.each do |like| %>
-  <tr>
-    <td><%= like.name %></td>
-    <td><%= like.category %></td>
-    <td><%= like.facebook_id %></td>
-    <td><%= like.created_time %></td>
-    <td><%= link_to 'Show', like %></td>
-    <td><%= link_to 'Edit', edit_like_path(like) %></td>
-    <td><%= link_to 'Destroy', like, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = Like -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:category) %></th>
+      <th><%= model_class.human_attribute_name(:facebook_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_time) %></th>
+      <th><%= model_class.human_attribute_name(:user_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @likes.each do |like| %>
+      <tr>
+        <td><%= link_to like.id, like_path(like) %></td>
+        <td><%= like.name %></td>
+        <td><%= like.category %></td>
+        <td><%= like.facebook_id %></td>
+        <td><%= like.created_time %></td>
+        <td><%= like.user_id %></td>
+        <td><%= like.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_like_path(like), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      like_path(like),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Like', new_like_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_like_path,
+            :class => 'btn btn-primary' %>
