--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,10 +13,14 @@
   </div>
   <div class="control-group">
     <%= f.label :city_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.number_field :city_id, :class => 'number_field' %>
+    <div class="input">
+    	<select id="city_select" name="city[city_id]">
+      	<%= options_for_select(City.order('name').all.collect{|city| [city.name, city.id] }, @city ? @city.id : nil) %>
+      </select>
     </div>
   </div>
+  
+  <%= render partial: 'profiles/form'%>
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
@@ -24,3 +28,13 @@
                 users_path, :class => 'btn' %>
   </div>
 <% end %>
+
+<!-- 
+<% semantic_form_for @user do |f| %>
+    <%= f.input :name %>
+    
+    <%# f.input :city, options_for_select(City.order('name').all.collect{|city| [city.name, city.slug] }) %>
+  <%= f.actions %>
+<% end %> -->
+
+
