--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,8 @@
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%# render 'layouts/stylesheet' %>
   	<%= javascript_include_tag "application" %>
+  	<!--[if IE 6]><%= stylesheet_link_tag 'ie6' %><![endif]-->
+  	<!--[if IE 7]><%= stylesheet_link_tag 'ie7' %><![endif]-->
   	<%# javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyDpQyPKnWwpJLOZJCzZocuO9RoetHBk70Q&sensor=false" %>
   	<%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?sensor=false" %>
   	<%# stylesheet_link_tag "http://cdn.leafletjs.com/leaflet-0.5/leaflet.css" %>
