Index added to poi for explorer link between sidebar and marker, but index doesn´t pass good

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,10 +32,11 @@
             <ul class="nav">
 							<li><% logo = image_tag("logo.png", :size => "100x200", class: "rounded-image") %>
 		  				<%= link_to logo, root_path %></li>
-              <li><a href="/">Home</a></li>
+              
               <li><a href="/explorer">Explorer</a></li>
               <li><a href="/packages">Packages</a></li>
-              <li><a href="/recomendations">Recomendaciones</a></li>           
+              <li><a href="/recomendations">Recomendaciones</a></li>
+              <li><a href="/retrieval">Retrieval</a></li>           
             </ul>
             
             <div class="navbar pull-right">
