--- a/app/views/pois/_poi_explorer.html.erb
+++ b/app/views/pois/_poi_explorer.html.erb
@@ -1,5 +1,6 @@
+
 <div class="grey-box">
-<li class="poi-preview" data-poi-id="<%= poi.id %>" data-poi-lat="<%= poi.latitude %>" data-poi-lng="<%= poi.longitude %>" data-poi-name="<%= poi.name %>" data-poi-slug="<%= poi.slug %>">
+<li class="poi-preview" data-poi-id="<%= poi.id %>" data-poi-lat="<%= poi.latitude %>" data-poi-lng="<%= poi.longitude %>" data-poi-name="<%= poi.name %>" data-poi-slug="<%= poi.slug %>" data-poi-index="<%= @counter %>">
   <div class="poi-img thumbnail">
     <%= link_to poi_url(poi) do %>
       <%= image_tag poi.photos.count > 0 ? poi.photos.first.image.url(:thumb_wide) : '/assets/poi-placeholder.jpg', class: 'poi-preview' %>
@@ -15,7 +16,7 @@
       </div>
       <span><%= poi.ratings_count %></span>
     </div>
-    <p><h4><%= link_to poi.name, poi_url(poi) %></h4></p>
+    <p><h4><%= link_to poi.name, poi_url(poi) %></h4> <h5><%= @counter %></h5></p>
     <div class="poi-user">
       <span>por <%= link_to poi.user.name, user_url(poi.user) if poi.user %> </span>
     </div>
@@ -30,3 +31,4 @@
   </div>
 </li>
 </div>
+<% @counter += 1 %>
