--- a/app/views/pois/index.html.erb
+++ b/app/views/pois/index.html.erb
@@ -85,7 +85,7 @@
 		  	</script>
 		    
 		    <a href="#map-canvas" class="map-expand"><center>&darr;</center></a>
-		    
+		    <%= javascript_include_tag "pois-index" %>
 		</div>
 	</div>
 
