Cleared whitout_accents gem, and added frinedly_id for slug generation

--- a/app/views/pois/index.html.erb
+++ b/app/views/pois/index.html.erb
@@ -1,6 +1,6 @@
- 
+
  <%= render partial: 'slider' %>
- <br />
+
 <div class="container marketing">        
          <!-- Three columns of text below the carousel -->
       <div class="row">
@@ -24,6 +24,7 @@
         </div><!-- /.span4 -->
       </div><!-- /.row -->
 	
+ <%= @location.city %>
 <hr/>
 
 <div class="row">
