--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 
   <%= render partial: 'layouts/header' %>
-  
+<body>	 
 <div id="content">
     <div class="container rounded-corners" id="container">
     <div class="row">	
@@ -13,7 +13,7 @@
     </div>
 		<hr class="title-divider rounded-corners span11" />
       
-								
+   						
 				<%= yield %>
 
       <hr>
