--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,6 +42,23 @@ img[src*="gstatic.com/"], img[src*="googleapis.com/"]  {
     margin-left: 290px;
 }
 
+/* FLASH NOTICE */
+#flash_notice, #flash_error {
+  padding: 5px 8px;
+  margin: 10px 0;
+  width: 60%;
+}
+
+#flash_notice {
+  background-color: #CFC;
+  border: solid 1px #6C6;
+}
+
+#flash_error {
+  background-color: #FCC;
+  border: solid 1px #C66;
+}
+
 .clear {
   clear: both;
   height: 0;
