--- a/app/views/pois/_form.html.erb
+++ b/app/views/pois/_form.html.erb
@@ -83,6 +83,7 @@
 -->
 
 <div id="new-poi">
+
   <%= form_for(@poi, html: {multipart: true}) do |f| %>
     <fieldset>
       <% if @poi.errors.any? %>
@@ -140,11 +141,12 @@
     <%= f.label :timetable %><br />
     <%= f.text_area :timetable, class: 'span6', rows: 2 %>
   </div>
-      
+  </div>    
         
         <br/>
         <div id="poi-type-image" class="input"></div>
-      </div>
+
+ 
       <%#
       <div class="clearfix">
         < f.label 'Subir ruta desde GPX' >
@@ -163,11 +165,12 @@
       <div class="clearfix">
         <%= f.label t(:location) %>
         <div class="input">
-          <div id="map-canvas" width="650" height="450"></div> 
+          
+          <div id="map-canvas" style="width: 700px; height: 300px; margin: 22px 0 30px -5px; display: block; clear: both;"></div>
           <span id="route-help" class="help-block"><%= t :route_help %></span>
         </div>
       </div>
-      
+      <%= javascript_include_tag "pois-new" %>
     </fieldset>
     
     <div class="actions">
