--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user, :html => { :class => 'form-horizontal' } do |f| %>
+<!-- <%= form_for @user, :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
     <%= f.label :name, :class => 'control-label' %>
     <div class="controls">
@@ -27,14 +27,31 @@
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
                 users_path, :class => 'btn' %>
   </div>
-<% end %>
-
-<!-- 
-<% semantic_form_for @user do |f| %>
-    <%= f.input :name %>
-    
-    <%# f.input :city, options_for_select(City.order('name').all.collect{|city| [city.name, city.slug] }) %>
-  <%= f.actions %>
 <% end %> -->
 
-
+<div class="span5 offset2">
+<%= semantic_form_for [@user] do |f| %>
+    <%= f.inputs do %>
+      <%= f.input :name %>
+      <%= f.input :email, as: :email %>
+      <%= f.input :city %>
+			<%= f.semantic_fields_for :profile do |p| %>
+	      <%= p.input :username %>
+	      <%= p.input :first_name %>
+	      <%= p.input :last_name %>
+	      <%= p.input :gender %>
+	      <%= p.input :about_me, as: :text %>
+	      <%= p.input :i_like %>
+	      <%= p.input :i_dont_like %>
+	      <%= p.input :is_married, as: :boolean %>
+	      <%= p.input :has_sons, as: :boolean %>
+	      <%= p.input :restrictions %>
+			<% end %>
+    <% end %>
+    <%= f.actions do %>
+      <%= f.action :submit, button_html: { class: 'btn btn-primary' } %>
+      
+      <%= f.action :cancel, button_html: { class: 'btn btn-danger' } %>
+    <% end %>
+  <% end %>
+</div>
