--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -32,10 +32,14 @@
 <div class="span5 offset2">
 <%= semantic_form_for [@user] do |f| %>
     <%= f.inputs do %>
-      <%= f.input :name %>
+      <%= f.input :name, :class => 'control-group' %>
       <%= f.input :email, as: :email %>
-      <%= f.input :city %>
-			<%= f.semantic_fields_for :profile do |p| %>
+      <%= f.input :city, include_blank: false %>
+			<%= f.semantic_fields_for @user.profiles do |p| %>
+				<%= p.input :born_date, :order => [:day, :month, :year],
+                      					:start_year    => 1950,
+                      					:end_year      => Date.today.year,
+                      					:include_blank => false %>
 	      <%= p.input :username %>
 	      <%= p.input :first_name %>
 	      <%= p.input :last_name %>
@@ -43,9 +47,11 @@
 	      <%= p.input :about_me, as: :text %>
 	      <%= p.input :i_like %>
 	      <%= p.input :i_dont_like %>
-	      <%= p.input :is_married, as: :boolean %>
-	      <%= p.input :has_sons, as: :boolean %>
+	      <%= p.input :is_married, :as => :radio %>
+	      <%= p.input :has_sons, :as => :radio %>
 	      <%= p.input :restrictions %>
+	      :leisure, :gastronomy, :ferias, :folclore,
+                  :sport, :nature, :culture, :other, :buildings, :friends, :events
 			<% end %>
     <% end %>
     <%= f.actions do %>
