--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -59,13 +59,13 @@
 		                  <%= render 'users/sessions/login'%>
 		                  <li class="divider"></li>
 		                  <li class="nav-header"><Nav header><%= t('authentications')%></li>
-		                  <li><a href="/auth/twitter" class="auth_provider">Twitter <%= image_tag "twitter_64.png", :size => "18x18", :alt => "Twitter" %></a></li>
+		                  <li><a href="/auth/twitter">Twitter <%= image_tag "twitter_64.png",:size => "30x30",  :alt => "Twitter" %></a></li>
 											  											
-											<li><a href="/auth/facebook" class="auth_provider">Facebook <%= image_tag "facebook_64.png", :size => "18x18", :alt => "Facebook" %></a></li>
+											<li><a href="/auth/facebook">Facebook <%= image_tag "facebook_64.png", :size => "30x30", :alt => "Facebook" %></a></li>
 											  
-											<li><a href="/auth/google_oauth2" class="auth_provider">Google <%= image_tag "google_64.png", :size => "18x18", :alt => "Google" %> </a></li>
+											<li><a href="/auth/google_oauth2">Google <%= image_tag "google_64.png", :size => "30x30", :alt => "Google" %> </a></li>
 											
-											<li><a href="/auth/foursquare" class="auth_provider"> Foursquare <%= image_tag "foursquare_64.png", :size => "18x18", :alt => "Forsquare" %></a></li>
+											<li><a href="/auth/foursquare"> Foursquare <%= image_tag "foursquare_64.png", :size => "30x30", :alt => "Forsquare" %></a></li>
                 		</ul>
               			</li>
             			</ul>
