recommendation controller added and minor changes, new-poi map not work

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
  *= require pois
  *= require file-uploader
  *= require authentications  
- *= categories
+ *= require categories
  *= require_self
  */
 
