--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -61,7 +61,7 @@
               
               <div class="description">
                 <a href="#" class="thumbnail">
-                  <%= image_tag poi.photos.count > 0 ? poi.photos.first.image.url(:thumb_wide) : '/assets/poi-placeholder.png', class: 'poi-preview' %>
+                  <%= image_tag poi.photos.count > 0 ? poi.photos.first.image.url(:thumb_wide) : '/assets/poi-placeholder.jpg', class: 'poi-preview' %>
                 </a>
                 <%= simple_format truncate(poi.description, length: 700) %>
               </div>
