--- a/app/views/pois/_form.html.erb
+++ b/app/views/pois/_form.html.erb
@@ -1,4 +1,4 @@
-<!--
+
 <div id="new-poi-form">
   <%= form_for(@poi, html: {multipart: true}) do |f| %>
     <fieldset>
@@ -18,99 +18,6 @@
         </div>
         
         <div class="clearfix">
-          <%= f.label "Categoria" %>
-          <div class="input">
-            <select id="poi_category" name="poi[category_id]" class="chosen fill-h">
-              <%= option_groups_from_collection_for_select(Supercategory.order('name').all, :categories, :name, :id, :name) %>
-            </select>
-          </div>
-        </div>
-        
-        <div class="clearfix">
-          <%= f.label "Localidad" %>
-          <div class="input">
-            <select id="poi_city" name="poi[city_id]" class="chosen fill-h">
-              <%= options_for_select(City.order('name').all.collect{|city| [city.name, city.id] }, @city ? @city.id : nil) %>
-            </select>
-          </div>
-        </div>
-      </div>
-      
-      <div class="span6">
-        <div class="tabs">
-          <div class="tab-selector">
-            <a href="#from-map" class="selected">Subir desde el Mapa</a>
-            <a href="#from-gpx">Subir fichero GPX</a>
-          </div>
-          
-          <div id="from-gpx" class="tab" style="display:none;">
-            <div class="clearfix">
-              <div class="input">
-                <%= f.file_field :gpx_file %>
-              </div>
-            </div>
-          </div>
-          
-          <div id="from-map" class="tab">
-            <div class="clearfix">
-              <div class="input">
-                <div id="map-canvas" width="460" height="450"></div> 
-                <span id="route-help" class="help-block">
-                  <%= t :route_help %> 
-                  <a href="#" id="new-map-undo" class="pull-right danger">Deshacer</a>
-                </span>
-                <%= javascript_include_tag "pois-new" %>
-              </div>
-              <div id="route-points" style="display: none;"></div>
-              <%= f.hidden_field :latitude, id: 'poi-latitude' %>
-              <%= f.hidden_field :longitude, id: 'poi-longitude' %>
-            </div>
-          </div>
-          
-        </div>
-      </div>
-    </fieldset>
-    <div class="fill-h">
-      <div class="actions fill-h">
-        <hr class="thin">
-        <div class="pull-right"><%= f.submit t(:submit_poi), class: 'btn btn-large btn-primary span3' %></div>
-      </div>
-    </div>
-  <% end %>
-</div>
-
-<%= render 'shared/notify', message: @poi.errors.full_messages.map {|e| ['error', e]} if @poi.errors.any? %>
--->
-
-<div id="new-poi">
-
-  <%= form_for(@poi, html: {multipart: true}) do |f| %>
-    <fieldset>
-      <% if @poi.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@poi.errors.count, "error") %> prohibited this poi from being saved:</h2>
-          <ul>
-          <% @poi.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-          <% end %>
-          </ul>
-        </div>
-      <% end %>
-    
-      <div class="clearfix">
-        <%= f.label t(:poi_name) %>
-        <div class="input">
-          <%= f.text_field :name, class: 'span6' %>
-        </div>
-      </div>
-      <div class="clearfix">
-        <%= f.label t(:poi_description) %>
-        <div class="input">
-          <%= f.text_area :description, class: 'span6', rows: 10 %>
-        </div>
-      </div>
-      
-      <div class="clearfix">
         <%= f.label "Categoria" %>
         <div class="input">
           <select id="poi_category" name="poi[category_id]">
@@ -141,42 +48,52 @@
     <%= f.label :timetable %><br />
     <%= f.text_area :timetable, class: 'span6', rows: 2 %>
   </div>
-  </div>    
-        
-        <br/>
-        <div id="poi-type-image" class="input"></div>
-
- 
-      <%#
-      <div class="clearfix">
-        < f.label 'Subir ruta desde GPX' >
-        <div class="input">
-          < f.file_field :gpx_file >
-        </div>
-      </div>
-      %>
+  </div>
       
-      <%= f.hidden_field :latitude, id: 'poi-latitude' %>
-      <%= f.hidden_field :longitude, id: 'poi-longitude' %>
-      <%= f.hidden_field :user_id, id: current_user.id %>
-      
-      <div id="route-points" style="display: none;"></div>
-
-      <div class="clearfix">
-        <%= f.label t(:location) %>
-        <div class="input">
+      <div class="span6">
+        <div class="tabs">
+          <div class="tab-selector">
+            <a href="#from-map" class="selected">Subir desde el Mapa</a>
+            <a href="#from-gpx">Subir fichero GPX</a>
+          </div>
           
-          <div id="map-canvas" style="width: 700px; height: 300px; margin: 22px 0 30px -5px; display: block; clear: both;"></div>
-          <span id="route-help" class="help-block"><%= t :route_help %></span>
+          <div id="from-gpx" class="tab" style="display:none;">
+            <div class="clearfix">
+              <div class="input">
+                <%= f.file_field :gpx_file %>
+              </div>
+            </div>
+          </div>
+          
+          <div id="from-map" class="tab">
+            <div class="clearfix">
+              <div class="input">
+                <div id="map-canvas" style="height: 450px; width: 460px; margin-left: -25px;"></div> 
+                <div id="map-canvas" style="width: 700px; height: 300px; margin: 22px 0 30px -5px;"></div>
+                <span id="route-help" class="help-block">
+                  <%= t :route_help %> 
+                  <a href="#" id="new-map-undo" class="pull-right danger">Deshacer</a>
+                </span>
+                <% javascript_include_tag "pois-new" %>
+              </div>
+              <div id="route-points" style="display: none;"></div>
+              <%= f.hidden_field :latitude, id: 'poi-latitude' %>
+              <%= f.hidden_field :longitude, id: 'poi-longitude' %>
+            </div>
+          </div>
+          
         </div>
       </div>
-      <%= javascript_include_tag "pois-new" %>
     </fieldset>
-    
-    <div class="actions">
-      <%= f.submit t(:submit_poi), class: 'btn primary span2' %>
+    <div class="fill-h">
+      <div class="actions fill-h">
+        <hr class="thin">
+        <div class="pull-right"><%= f.submit t(:submit_poi), class: 'btn btn-large btn-primary span3' %></div>
+      </div>
     </div>
   <% end %>
 </div>
+
+<%= render 'shared/notify', message: @poi.errors.full_messages.map {|e| ['error', e]} if @poi.errors.any? %>
 
 
